@@ -1,14 +1,14 @@
 package com.minhtung.hackathon.config;
 
-import com.minhtung.hackathon.dto.request.CreateTeamDto;
 import com.minhtung.hackathon.entity.*;
 import com.minhtung.hackathon.enums.*;
 import com.minhtung.hackathon.repository.*;
-import com.minhtung.hackathon.service.TeamService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 
@@ -16,12 +16,12 @@ import java.util.*;
 @RequiredArgsConstructor
 public class DataInitializer implements CommandLineRunner {
     private final UserRepository userRepository;
-    private final TeamService teamService;
     private final TeamRepository teamRepository;
     private final StudentprofileRepository studentprofileRepository;
     private final EventRepository eventRepository;
     private final SystemRequestRepository systemRequestRepository;
     private final ScoringTemplateRepository templateRepository;
+    private final MemberRepository memberRepository;
 
     // Bộ nhớ tạm lưu trữ: Email của Mentor -> Tập hợp các TrackId được giao làm Mentor
     private final Map<String, Set<Long>> mentorTrackMapping = new HashMap<>();
@@ -31,9 +31,14 @@ public class DataInitializer implements CommandLineRunner {
     }
 
     @Override
+    @Transactional
     public void run(String... args) {
+        // Chỉ thực hiện khởi tạo toàn bộ nếu hệ thống chưa có dữ liệu User
         if (userRepository.count() == 0) {
-            // ==================== TÀI KHOẢN LECTURER (MENTOR & JUDGE) ====================
+            System.out.println("⏳ Đang khởi tạo dữ liệu mẫu cho hệ thống...");
+
+            // ==================== KHỞI TẠO TÀI KHOẢN HỆ THỐNG ====================
+            // Tài khoản Lecturer ban đầu
             User u4 = new User();
             u4.setEmail("le.minh.tri@uit.edu.vn");
             u4.setPassword("123456");
@@ -79,12 +84,12 @@ public class DataInitializer implements CommandLineRunner {
             u8.setPassword("123456");
             u8.setFullName("TS. Trần Quốc Bảo");
             u8.setTitle("CTO");
-            u8.setOrg("MoMo");
+            u8.setOrg("Momo");
             u8.setRole(Role.LECTURER);
             u8.setActive(true);
             u8.setStatus(UserStatus.ACCEPTED);
 
-            // ---- THÊM MỚI 4 TÀI KHOẢN LECTURER ĐỂ PHỦ KÍN TẤT CẢ TRACK & ROUND ----
+            // 4 tài khoản Lecturer bổ sung để phủ các bảng đấu
             User uNew1 = new User();
             uNew1.setEmail("nguyen.van.a@fpt.edu.vn");
             uNew1.setPassword("123456");
@@ -106,7 +111,7 @@ public class DataInitializer implements CommandLineRunner {
             uNew2.setStatus(UserStatus.ACCEPTED);
 
             User uNew3 = new User();
-            uNew3.setEmail("vũ.hoang.c@fpt.edu.vn");
+            uNew3.setEmail("vu.hoang.c@fpt.edu.vn"); // Sửa lại chữ "vũ" thành "vu" để tránh lỗi email
             uNew3.setPassword("123456");
             uNew3.setFullName("Chuyên gia Vũ Hoàng C");
             uNew3.setTitle("Solutions Architect");
@@ -127,7 +132,7 @@ public class DataInitializer implements CommandLineRunner {
 
             userRepository.saveAll(List.of(u4, u5, u6, u7, u8, uNew1, uNew2, uNew3, uNew4));
 
-            // ==================== THÀNH VIÊN VÀ SINH VIÊN ====================
+            // Khởi tạo các User (Thí sinh)
             User user1 = new User();
             user1.setEmail("user1@gmail.com");
             user1.setPassword("123456");
@@ -158,7 +163,27 @@ public class DataInitializer implements CommandLineRunner {
             user3.setFullName("Phạm Khắc Đăng Khoa");
             userRepository.save(user3);
 
-            // HARD CODE PROFILE USER 1 - 3
+            User user4 = new User();
+            user4.setEmail("user4@gmail.com");
+            user4.setPassword("123456");
+            user4.setRole(Role.USER);
+            user4.setSchoolName("Trường đại học Công Nghiệp");
+            user4.setActive(true);
+            user4.setStatus(UserStatus.ACCEPTED);
+            user4.setFullName("Nguyễn Thành Thái");
+            userRepository.save(user4);
+
+            User user5 = new User();
+            user5.setFullName("Hồ Ngọc Bảo Trân");
+            user5.setEmail("baotran@gmail.com");
+            user5.setPassword("123456");
+            user5.setRole(Role.USER);
+            user5.setStatus(UserStatus.ACCEPTED);
+            user5.setSchoolName("Trường đại học FPT HCM");
+            user5.setActive(true);
+            userRepository.save(user5);
+
+            // Khởi tạo Student Profiles tương ứng
             Student_profile profile1 = new Student_profile();
             profile1.setUser(user1);
             profile1.setBio("Mình là sinh viên năm 3 ngành Kỹ thuật phần mềm tại FPT University. Mình có kinh nghiệm làm việc với các công nghệ Frontend như React và Vue, luôn thích tối ưu hóa UI/UX để mang lại trải nghiệm tốt nhất.");
@@ -183,79 +208,21 @@ public class DataInitializer implements CommandLineRunner {
             profile3.setTopics(List.of("Web Development", "Creative Coding"));
             studentprofileRepository.save(profile3);
 
-            // ---------------- team 1 đã đủ maxSlot -----------------------
-            User user6 = new User();
-            user6.setFullName("Nguyễn Văn Leader Team Một");
-            user6.setEmail("user11@gmail.com");
-            user6.setPassword("123456");
-            user6.setStatus(UserStatus.ACCEPTED);
-            user6.setRole(Role.USER);
-            user6.setSchoolName("Trường đại học Bách Khoa HCM");
-            user6.setActive(true);
-            userRepository.save(user6);
+            Student_profile profile4 = new Student_profile();
+            profile4.setUser(user4);
+            profile4.setBio("Mình là sinh viên năm 3 ngành Kỹ thuật phần mềm tại FPT University. Mình có kinh nghiệm làm việc với React và Spring Boot, từng tham gia dự án nhóm và đảm nhận vai trò Frontend và hỗ trợ Backend.");
+            profile4.setPositions(List.of("Frontend Developer"));
+            profile4.setTechTags(Map.of("frontend", List.of("React", "Next.js", "Tailwind CSS"), "backend", List.of("Spring Boot")));
+            profile4.setTopics(List.of("Web Development"));
+            studentprofileRepository.save(profile4);
 
-            User user7 = new User();
-            user7.setFullName("Nguyễn Văn Member2 Team Một");
-            user7.setEmail("user12@gmail.com");
-            user7.setPassword("123456");
-            user7.setStatus(UserStatus.ACCEPTED);
-            user7.setRole(Role.USER);
-            user7.setSchoolName("Trường đại học Bách Khoa HCM");
-            user7.setActive(true);
-            userRepository.save(user7);
-
-            User user8 = new User();
-            user8.setFullName("Nguyễn Văn Member3 Team Một");
-            user8.setEmail("user13@gmail.com");
-            user8.setPassword("123456");
-            user8.setRole(Role.USER);
-            user8.setStatus(UserStatus.ACCEPTED);
-            user8.setSchoolName("Trường đại học Bách Khoa HCM");
-            user8.setActive(true);
-            userRepository.save(user8);
-
-            User user9 = new User();
-            user9.setFullName("Nguyễn Văn Member4 Team Một");
-            user9.setEmail("user14@gmail.com");
-            user9.setPassword("123456");
-            user9.setStatus(UserStatus.ACCEPTED);
-            user9.setRole(Role.USER);
-            user9.setSchoolName("Trường đại học Bách Khoa HCM");
-            user9.setActive(true);
-            userRepository.save(user9);
-
-            teamService.createTeam(new CreateTeamDto(
-                    "SEAL HACKER", "Chào bạn bọn mình là sinh viên năm 3 chuyên nghành ATTT.", Collections.emptyList()
-            ), user6.getId());
-            teamService.joinTeamByCode(teamRepository.findByLeaderId(user6.getId()).get().getInviteCode(), user7.getId());
-            teamService.joinTeamByCode(teamRepository.findByLeaderId(user6.getId()).get().getInviteCode(), user8.getId());
-            teamService.joinTeamByCode(teamRepository.findByLeaderId(user6.getId()).get().getInviteCode(), user9.getId());
-
-            // ------ team 2 đang có 2 thành viên -------
-            User user10 = new User();
-            user10.setFullName("Nguyễn Văn Leader Team Hi");
-            user10.setEmail("usert21@gmail.com");
-            user10.setPassword("123456");
-            user10.setRole(Role.USER);
-            user10.setStatus(UserStatus.ACCEPTED);
-            user10.setSchoolName("Trường đại học FPT");
-            user10.setActive(true);
-            userRepository.save(user10);
-
-            User user11 = new User();
-            user11.setFullName("Nguyễn Văn Member Team Hi");
-            user11.setEmail("usert22@gmail.com");
-            user11.setPassword("123456");
-            user11.setRole(Role.USER);
-            user11.setStatus(UserStatus.ACCEPTED);
-            user11.setSchoolName("Trường đại học FPT");
-            user11.setActive(true);
-            userRepository.save(user11);
-
-            teamService.createTeam(new CreateTeamDto(
-                    "FPT CÓC CAM", "Nhóm mình tìm kiếm 1 bạn nữ frontend (không frontend cũng được), để quản lý tụi mình ạ.", Collections.emptyList()
-            ), user10.getId());
-            teamService.joinTeamByCode(teamRepository.findByLeaderId(user10.getId()).get().getInviteCode(), user11.getId());
+            Student_profile profile5 = new Student_profile();
+            profile5.setUser(user5);
+            profile5.setBio("Mình là sinh viên năm 3 ngành Kỹ thuật phần mềm tại FPT University. Mình yêu thích sự kết hợp giữa thiết kế và công nghệ, đảm nhận tốt cả hai vai trò Frontend Developer và UI/UX Designer.");
+            profile5.setPositions(List.of("Frontend Developer", "UI/UX Designer"));
+            profile5.setTechTags(Map.of("frontend", List.of("React", "Tailwind CSS"), "design", List.of("Figma", "Adobe XD")));
+            profile5.setTopics(List.of("UI/UX Design", "Web Development"));
+            studentprofileRepository.save(profile5);
 
             User user12 = new User();
             user12.setFullName("ADMIN");
@@ -265,18 +232,19 @@ public class DataInitializer implements CommandLineRunner {
             user12.setActive(true);
             user12.setStatus(UserStatus.ACCEPTED);
             userRepository.save(user12);
-        }
 
-        if (eventRepository.count() == 0) {
-            initSampleEvent();
-        }
+            // ==================== KHỞI TẠO SCORING TEMPLATE TRONG KHỐI DỮ LIỆU CHUNG ====================
+            ScoringTemplate officialTemplate = initSampleScoringTemplates();
 
-        if (templateRepository.count() == 0) {
-            initSampleScoringTemplates();
+            // ==================== KHỞI TẠO EVENT & TEAM TRONG KHỐI DỮ LIỆU CHUNG ====================
+            initSampleEvent(user1, user2, user3, user4, user5, officialTemplate);
+
+        } else {
+            System.out.println("ℹ️ Cơ sở dữ liệu đã có dữ liệu từ trước, bỏ qua bước khởi tạo (Initialize).");
         }
     }
 
-    private void initSampleEvent() {
+    private void initSampleEvent(User user1, User user2, User user3, User user4, User user5, ScoringTemplate officialTemplate) {
         LocalDateTime now = LocalDateTime.now();
 
         // ========== STEP 1: Thông tin cơ bản Event ==========
@@ -289,7 +257,7 @@ public class DataInitializer implements CommandLineRunner {
         event.setTopic("Trí tuệ nhân tạo vì cộng đồng");
         event.setMinTeamMember(3);
         event.setMaxTeamMember(5);
-        event.setStatus(EventStatus.PUBLISHED);
+        event.setStatus(EventStatus.LIVE);
         event.setCreateAt(now);
         event.setOpenRegisterTime(now.plusDays(1));
         event.setCloseRegisterTime(now.plusDays(20));
@@ -355,7 +323,7 @@ public class DataInitializer implements CommandLineRunner {
         // -- Vòng 1: Sơ loại --
         Round round1 = new Round();
         round1.setName("Vòng sơ loại");
-        round1.setTimeStart(now.plusDays(21));
+        round1.setTimeStart(now.minusDays(1));
         round1.setTimeEnd(now.plusDays(22));
         round1.setHasPresetiontation(false);
         round1.setTopTeamPass(20);
@@ -364,16 +332,19 @@ public class DataInitializer implements CommandLineRunner {
         round1.setMeetingLink("https://meet.google.com/seal-round1");
         round1.setPosition("https://meet.google.com/seal-round1");
         round1.setEvent(event);
+        if (officialTemplate != null) {
+            round1.setScoringTemplate(officialTemplate);
+        }
 
         SubmissionConfig config1 = new SubmissionConfig(
-                round1, "Vòng sơ loại", now.plusDays(21), now.plusDays(22),
+                round1, "Vòng sơ loại", now.minusDays(1), now.plusDays(22),
                 "Nộp file PDF ý tưởng (tối đa 5 trang) và link GitHub repo (nếu có).", true
         );
         round1.setSubmissionConfig(config1);
 
         List<RoundTimeline> timeline1 = new ArrayList<>();
-        timeline1.add(new RoundTimeline("Mở cổng nộp bài", "Thí sinh bắt đầu nộp ý tưởng", now.plusDays(21).toString(), null, round1));
-        timeline1.add(new RoundTimeline("Chấm điểm", "Ban giám khảo chấm bài", now.plusDays(22).toString(), null, round1));
+        timeline1.add(new RoundTimeline("Mở cổng nộp bài", "Thí sinh bắt đầu nộp ý tưởng", "08:00", "08:30", round1));
+        timeline1.add(new RoundTimeline("Chấm điểm", "Ban giám khảo chấm bài", "13:00", "17:00", round1));
         round1.setRoundTimelines(timeline1);
         rounds.add(round1);
 
@@ -387,6 +358,9 @@ public class DataInitializer implements CommandLineRunner {
         round2.setOrdinal_number(2);
         round2.setPosition("Hội trường A, Đại học FPT TP.HCM");
         round2.setEvent(event);
+        if (officialTemplate != null) {
+            round2.setScoringTemplate(officialTemplate);
+        }
         rounds.add(round2);
 
         // -- Vòng 3: Chung kết --
@@ -399,6 +373,9 @@ public class DataInitializer implements CommandLineRunner {
         round3.setOrdinal_number(3);
         round3.setPosition("Hội trường lớn, Đại học FPT TP.HCM");
         round3.setEvent(event);
+        if (officialTemplate != null) {
+            round3.setScoringTemplate(officialTemplate);
+        }
         rounds.add(round3);
 
         event.setRounds(rounds);
@@ -447,6 +424,38 @@ public class DataInitializer implements CommandLineRunner {
 
         // ========== STEP 7: Mời Mentor / Giám khảo ==========
         initMentorJudgeInvites(savedEvent);
+
+        // ========== STEP 8: Khởi tạo Đội thi mẫu (Đã tối ưu thứ tự JPA) ==========
+        Track selectedTrack = savedEvent.getTracks().get(0); // Bảng đấu AI/Machine Learning
+
+        Team customTeam = new Team();
+        customTeam.setName("SEAL INNOVATORS");
+        customTeam.setDescription("Đội thi tập trung phát triển giải pháp toàn diện kết hợp giữa UI/UX tối ưu và hệ thống backend mạnh mẽ.");
+        customTeam.setStatus(TeamStatus.APPROVED);
+        customTeam.setCreateAt(LocalDate.now());
+        customTeam.setInviteCode("SEAL-INV-" + UUID.randomUUID().toString().substring(0, 5).toUpperCase());
+        customTeam.setLeader(user1); // Bùi Thiên Khánh làm Leader
+        customTeam.setTrack(selectedTrack);
+
+        // A. Lưu Team trống trước để sinh ID khóa chính tự động dưới DB
+        final Team finalTeam = teamRepository.save(customTeam);
+
+        // B. Tạo danh sách các thành viên chính thức có kết nối chặt chẽ với finalTeam
+        List<Member> teamMembers = new ArrayList<>();
+        teamMembers.add(new Member(MemberRole.LEADER, MemberStatus.OFFICAL, finalTeam, user1, JoinMethod.CREATETEAM));
+        teamMembers.add(new Member(MemberRole.MEMBER, MemberStatus.OFFICAL, finalTeam, user2, JoinMethod.JOINBYCODE));
+        teamMembers.add(new Member(MemberRole.MEMBER, MemberStatus.OFFICAL, finalTeam, user3, JoinMethod.JOINBYCODE));
+        teamMembers.add(new Member(MemberRole.MEMBER, MemberStatus.OFFICAL, finalTeam, user4, JoinMethod.JOINBYCODE));
+//        teamMembers.add(new Member(MemberRole.MEMBER, MemberStatus.OFFICAL, finalTeam, user5, JoinMethod.JOINBYCODE));
+
+        // C. Lưu hàng loạt Member xuống Database trước để đảm bảo khóa ngoại không lỗi
+        memberRepository.saveAll(teamMembers);
+
+        // D. Cập nhật collection Java Object trên bộ nhớ và lưu lại Team lần cuối nhằm đồng bộ
+        finalTeam.setMembers(teamMembers);
+        teamRepository.save(finalTeam);
+
+        System.out.println("✅ Khởi tạo thành công 1 Đội thi mẫu: SEAL INNOVATORS (4 thành viên)!");
     }
 
     private void initMentorJudgeInvites(Event event) {
@@ -454,28 +463,23 @@ public class DataInitializer implements CommandLineRunner {
         Track trackBlockchain = event.getTracks().get(1);
         Track trackMobile = event.getTracks().get(2);
 
-        Round round1 = event.getRounds().get(0); // Vòng sơ loại
-        Round round2 = event.getRounds().get(1); // Vòng bán kết
-        Round round3 = event.getRounds().get(2); // Vòng chung kết
+        Round round1 = event.getRounds().get(0);
+        Round round2 = event.getRounds().get(1);
+        Round round3 = event.getRounds().get(2);
 
         User sender = userRepository.findByEmail("admin@gmail.com").orElse(null);
 
         // ==================== 1. PHÂN CÔNG MENTOR (THEO TRACK) ====================
-        // Đảm bảo cả 3 track đều có Mentor đứng ra hỗ trợ
         inviteMentor(sender, event, "le.minh.tri@uit.edu.vn", trackAI.getId());
         inviteMentor(sender, event, "pham.thi.lan@vinai.io", trackAI.getId());
 
         inviteMentor(sender, event, "nguyen.van.a@fpt.edu.vn", trackBlockchain.getId());
-        inviteMentor(sender, event, "vũ.hoang.c@fpt.edu.vn", trackBlockchain.getId());
+        inviteMentor(sender, event, "vu.hoang.c@fpt.edu.vn", trackBlockchain.getId());
 
         inviteMentor(sender, event, "tran.thi.b@fpt.edu.vn", trackMobile.getId());
 
         // ==================== 2. PHÂN CÔNG JUDGE (CẶP TRACK + ROUND) ====================
-        // Mục tiêu: Phủ kín tất cả các Round (1, 2, 3) cho tất cả các Track (AI, Blockchain, Mobile)
-        // Lưu ý: Không phân công Judge trùng vào Track mà người đó đang Mentor.
-
         // --- BẢNG AI/MACHINE LEARNING (Round 1, 2, 3) ---
-        // PGS. Hoàng Văn Minh & TS. Trần Quốc Bảo không làm mentor AI -> Chấm AI thoải mái
         inviteJudge(sender, event, "hoang.van.minh@hcmut.edu.vn", List.of(
                 new JudgeAssignment(trackAI.getId(), round1.getId()),
                 new JudgeAssignment(trackAI.getId(), round2.getId())
@@ -485,7 +489,6 @@ public class DataInitializer implements CommandLineRunner {
         ));
 
         // --- BẢNG BLOCKCHAIN (Round 1, 2, 3) ---
-        // ThS. Nguyễn Thị Hồng & TS. Đặng Lê D không mentor Blockchain -> Cho chấm Blockchain
         inviteJudge(sender, event, "nguyen.thi.hong@zalo.me", List.of(
                 new JudgeAssignment(trackBlockchain.getId(), round1.getId()),
                 new JudgeAssignment(trackBlockchain.getId(), round2.getId())
@@ -495,19 +498,15 @@ public class DataInitializer implements CommandLineRunner {
         ));
 
         // --- BẢNG MOBILE APP (Round 1, 2, 3) ---
-        // TS. Trần Quốc Bảo & PGS. Hoàng Văn Minh không mentor Mobile -> Cho chấm Mobile
         inviteJudge(sender, event, "tran.quoc.bao@momo.vn", List.of(
-                new JudgeAssignment(trackMobile.getId(), round1.getId()),
+                new JudgeAssignment(trackAI.getId(), round1.getId()),
                 new JudgeAssignment(trackMobile.getId(), round2.getId())
         ));
         inviteJudge(sender, event, "hoang.van.minh@hcmut.edu.vn", List.of(
                 new JudgeAssignment(trackMobile.getId(), round3.getId())
         ));
 
-
         // === TEST CASE CHẶN THỬ NGHIỆM TỰ ĐỘNG ===
-        // Thử mời TS. Nguyễn Văn A chấm bảng Blockchain Vòng 1.
-        // Vì thầy A đã Mentor cho bảng Blockchain ở trên nên hệ thống sẽ tự động in log CẢNH BÁO và CHẶN LẠI!
         inviteJudge(sender, event, "nguyen.van.a@fpt.edu.vn", List.of(
                 new JudgeAssignment(trackBlockchain.getId(), round1.getId())
         ));
@@ -529,7 +528,6 @@ public class DataInitializer implements CommandLineRunner {
         req.setSentAt(LocalDateTime.now());
         systemRequestRepository.save(req);
 
-        // Ghi nhận vào Map: Mentor này đang quản lý Track này
         mentorTrackMapping.computeIfAbsent(mentorEmail, k -> new HashSet<>()).add(trackId);
     }
 
@@ -538,23 +536,19 @@ public class DataInitializer implements CommandLineRunner {
         if (judge == null) return;
 
         for (JudgeAssignment assignment : assignments) {
-            // KIỂM TRA ĐIỀU KIỆN CHẶN: Nếu người này đã làm Mentor cho chính Track này rồi
             if (mentorTrackMapping.containsKey(judgeEmail) &&
                     mentorTrackMapping.get(judgeEmail).contains(assignment.trackId())) {
                 System.out.println("⚠️ [VALIDATION FAILED] " + judgeEmail + " đã là Mentor cho Track ID "
                         + assignment.trackId() + ". Không được phép mời làm Judge cho Track này!");
-                continue; // Bỏ qua cặp assign lỗi này và nhảy sang vòng lặp kế tiếp
+                continue;
             }
 
             SystemRequest req = new SystemRequest();
             req.setSender(sender);
             req.setReceiver(judge);
             req.setReferenceId(event.getId());
-
-            // Lưu đồng thời cả Track ID và Round ID vào lời mời
             req.setTrackId(assignment.trackId());
             req.setRoundId(assignment.roundId());
-
             req.setReferenceType(SystemRequest.ReferenceType.EVENT);
             req.setType(SystemRequest.RequestType.JUDGE_INVITE);
             req.setStatus(SystemRequest.RequestStatus.PENDING);
@@ -563,47 +557,45 @@ public class DataInitializer implements CommandLineRunner {
 
             systemRequestRepository.save(req);
         }
-
     }
 
     // ==================== 3. KHỞI TẠO BIỂU MẪU CHẤM ĐIỂM (SCORING TEMPLATES) ====================
-    private void initSampleScoringTemplates() {
+    private ScoringTemplate initSampleScoringTemplates() {
         LocalDateTime timeNow = LocalDateTime.now();
 
-        // --- Mẫu 1: Bản chính thức (ACTIVE / PUBLISHED) ---
+        // --- Mẫu 1: Bản chính thức (OFFICIAL) ---
         ScoringTemplate officialTemplate = new ScoringTemplate();
         officialTemplate.setName("Khung Đánh Giá Hackathon Chung Cuộc");
         officialTemplate.setDescription("Bảng tiêu chí chuẩn dùng để đánh giá toàn diện sản phẩm công nghệ vòng chung kết.");
         officialTemplate.setCreateAt(timeNow);
         officialTemplate.setUpdateAt(timeNow);
-        officialTemplate.setTieBreaking(true); // Ưu tiên giải quyết khi đồng điểm
-        officialTemplate.setStandardDeviation(1.5); // Ngưỡng độ lệch chuẩn tối đa cho phép giữa các giám khảo
-
-        // Lưu ý: Thay thế ScoringTemplateStatus.ACTIVE/PUBLISHED đúng theo tên Enum gốc của bạn nhé
+        officialTemplate.setTieBreaking(true);
+        officialTemplate.setStandardDeviation(1.5);
         officialTemplate.setStatus(ScoringTemplateStatus.OFFICIAL);
-        officialTemplate.setUsageCount(3); // Giả lập đã được dùng 3 lần
+        officialTemplate.setUsageCount(3);
 
-        // Gán các tiêu chí con (Criterion) sử dụng phương thức helper addCriterion sẵn có
         Criterion crit1 = new Criterion();
         crit1.setName("Tính Sáng Tạo & Đột Phá");
         crit1.setDescription("Ý tưởng có mới lạ, độc đáo và giải quyết triệt để nỗi đau của thị trường không?");
         crit1.setWeight(30);
+        crit1.setMaxRange(10);
         officialTemplate.addCriterion(crit1);
 
         Criterion crit2 = new Criterion();
         crit2.setName("Kiến Trúc & Hoàn Thiện Kỹ Thuật");
         crit2.setDescription("Mức độ hoàn thiện của mã nguồn, độ ổn định của bản demo sản phẩm thực tế.");
         crit2.setWeight(40);
+        crit2.setMaxRange(10);
         officialTemplate.addCriterion(crit2);
 
         Criterion crit3 = new Criterion();
         crit3.setName("Kỹ Năng Thuyết Trình (Pitching)");
         crit3.setDescription("Khả năng trình bày mạch lạc, trả lời câu hỏi phản biện từ Hội đồng Giám khảo.");
         crit3.setWeight(30);
+        crit3.setMaxRange(10);
         officialTemplate.addCriterion(crit3);
 
-        templateRepository.save(officialTemplate);
-
+        officialTemplate = templateRepository.save(officialTemplate);
 
         // --- Mẫu 2: Bản Lưu Nháp (DRAFT) ---
         ScoringTemplate draftTemplate = new ScoringTemplate();
@@ -631,6 +623,7 @@ public class DataInitializer implements CommandLineRunner {
         templateRepository.save(draftTemplate);
 
         System.out.println("✅ Khởi tạo thành công 2 bộ Scoring Template mẫu!");
-    }
 
+        return officialTemplate;
+    }
 }
